// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/page/Nav/SideMenu/UserNavigate-ce render snap 1`] = `
<body>
  <div>
    <span
      class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
    >
      <span
        class="ant-avatar-string"
        style="transform: scale(1) translateX(-50%);"
      >
        T
      </span>
    </span>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserNavigate-ce render snap 2`] = `
<body>
  <div>
    <span
      class="ant-avatar ant-avatar-circle action-avatar ant-popover-open css-1wq79dc css-dev-only-do-not-override-txh9fw"
    >
      <span
        class="ant-avatar-string"
        style="transform: scale(1) translateX(-50%);"
      >
        T
      </span>
    </span>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1lz0wpv"
            >
              <div
                class="header"
                title="Test name"
              >
                Test name
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 1024 1024"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M938.667 153.6v599.467c0 38.4-29.867 68.266-68.267 68.266h-14.933V268.8c0-55.467-44.8-100.267-100.267-100.267H202.667V153.6c0-38.4 29.866-68.267 68.266-68.267H870.4c38.4 0 68.267 29.867 68.267 68.267M454.4 435.2l55.467 162.133H396.8z"
                      fill="#C3C6CD"
                    />
                    <path
                      d="M755.2 202.667H151.467c-36.267 0-66.134 29.866-66.134 66.133v601.6c0 38.4 29.867 68.267 66.134 68.267h601.6c36.266 0 66.133-29.867 66.133-66.134V268.8c2.133-36.267-27.733-66.133-64-66.133m-192 541.866L524.8 640H379.733l-38.4 104.533h-51.2l136.534-362.666h55.466l130.134 362.666z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    <div
                      class="flex-space-between"
                      id="change-language-trigger-node"
                    >
                      <span>
                        语言
                      </span>
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    个人中心
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m-.667-7.334v4h1.333v-4zm0-2.666V6h1.333V4.667z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    查看版本号
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m3.333-4L14.666 8l-3.333-2.667v2H6v1.334h5.333z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    退出登录
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserNavigate-ce render snap 3`] = `
<body>
  <div>
    <span
      class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
    >
      <span
        class="ant-avatar-string"
        style="transform: scale(1) translateX(-50%);"
      >
        T
      </span>
    </span>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1lz0wpv"
            >
              <div
                class="header"
                title="Test name"
              >
                Test name
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 1024 1024"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M938.667 153.6v599.467c0 38.4-29.867 68.266-68.267 68.266h-14.933V268.8c0-55.467-44.8-100.267-100.267-100.267H202.667V153.6c0-38.4 29.866-68.267 68.266-68.267H870.4c38.4 0 68.267 29.867 68.267 68.267M454.4 435.2l55.467 162.133H396.8z"
                      fill="#C3C6CD"
                    />
                    <path
                      d="M755.2 202.667H151.467c-36.267 0-66.134 29.866-66.134 66.133v601.6c0 38.4 29.867 68.267 66.134 68.267h601.6c36.266 0 66.133-29.867 66.133-66.134V268.8c2.133-36.267-27.733-66.133-64-66.133m-192 541.866L524.8 640H379.733l-38.4 104.533h-51.2l136.534-362.666h55.466l130.134 362.666z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    <div
                      class="flex-space-between"
                      id="change-language-trigger-node"
                    >
                      <span>
                        语言
                      </span>
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    个人中心
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m-.667-7.334v4h1.333v-4zm0-2.666V6h1.333V4.667z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    查看版本号
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m3.333-4L14.666 8l-3.333-2.667v2H6v1.334h5.333z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    退出登录
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
